--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.20",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
