--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/axios": "^0.9.36",
     "@types/pdfkit": "^0.13.8",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
